


INSTALLATION CHANGES




BUG FIXES

	

	
	**************************************************
	*						 *
	*	       1.9 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.9.1


NEW FEATURES

    o	as.Date() now has a method for "POSIXlt" objects.

    o	mean() has a method for "difftime" objects and so summary() works.


BUG FIXES

    o	pbinom(q, N, prob) is now more accurate when prob is close to 0
	(PR#6757).

    o	pcauchy(x, .., log.p) is now more accurate for large x,
	particularly when log.p = TRUE	(PR#6756).

    o	pgeom(q, prob, lower.tail, log.p) is now (sometimes much) more
	accurate when prob is very small (PR#6792).

    o	makeARIMA() was not handling an ARMA(0, 0) model correctly.

    o	as.Date() was failing on factors.  (PR#6779)

    o	min(), max() and range() were failing on "difftime" objects.

    o	as.data.frame.list() could fail on some unusual list names.
	(PR#6782)

    o	type.convert() ignored na.strings when no conversion was done.
	(PR#6781, not needed for its primary use in read.table.)

    o	src/modules/X11/dataentry.c would not build on some XFree
	4.4.0 systems.  (This is a bug in their header files but we have
	added a workaround.)

    o   Fixed the clipping problem in the quartz device.

    o   Subsetting a factor swapped the order of the attributes, which
	identical() cares about.  (PR#6799)

    o   The L-BFGS-B option of optim() apparently needs part of its 
	workspace zeroed.  (PR#6720)

    o   extractAIC.survreg needed updating.

    o   When using the header Rmath.h in standalone mode, the case where
        TRUE, FALSE are already defined is now handled correctly.

    o	Package utils now exports several functions that are needed for
        writing Sweave drivers.

    o	Comparison of two lists/expressions was giving nonsensical
	(and often random) answers, and is now an error.



		CHANGES IN R VERSION 1.9.0


USER-VISIBLE CHANGES
